fixed 2 issues, weekdays alignment and useDependency warning

--- a/src/components/Weekdays/Weekdays.module.css
+++ b/src/components/Weekdays/Weekdays.module.css
@@ -1,9 +1,9 @@
 .calendar__weekdays {
-    padding: 7px 2px 0px 5px;
-    color: #c0c0c0;
-    font-size: small;
-    font-weight: bold;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    /* border: 1px blue solid; */
+  padding: 7px 4px;
+  color: #c0c0c0;
+  font-size: small;
+  font-weight: bold;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  /* border: 1px blue solid; */
 }
